--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -1,3 +1,24 @@
+#background {
+    background-color: #f7eddc;
+    height: 600px;
+    width: 100%;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    text-align: left;
+}
+
+#header {
+    height: 25%;
+    width: 100%;
+    background-color: black;
+    text-align: center;
+    top: 0px;
+}
+
+h1 {
+    color: black;
+}
 #mainContainer {
     padding: 3.33vh 0vw 3.33vh 0vw;
 }
@@ -27,11 +48,18 @@ hr {
 }
 
 #profilePictureArea {
-    background: red;
+    height: 150px;
+    width: 150px;
+    align-items: center;
+    background: transparent;
+    float: left;
 }
 
 #bioArea {
-    background: orange;
+    background:  #f7eddc;
+    width: 100%;
+    height: 100px;
+    line-height: 1;
 }
 
 #ratingArea {
@@ -53,11 +81,24 @@ hr {
 
 #favoriteListings {
     display: inline-block;
-    background: violet;
+    background: transparent;
     overflow-y: scroll;
     width: 47%;
     height: 100%;
     margin: 0% 0% 0% 0%;
+    float: right;
+    height: 150px;
+    width: 150px;
+}
+
+#info {
+    background-color: #f7eddc;
+    height: 600px;
+    width: 100%;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    float: initial;
 }
 
 /* Scrollbar styles */
