--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
 #background {
     background-color: #f7eddc;
     height: 700px;
@@ -8,7 +10,7 @@
 }
 
 #header {
-    height: 25%;
+    height: 20%;
     width: 100%;
     background-color: black;
     text-align: center;
@@ -24,7 +26,7 @@
 }
 
 #introInfo {
-    float: right;
+    float: left;
     height: 60%;
     width: 30%;
     border: none;
@@ -43,11 +45,11 @@
 }
 
 #logTabs {
-    float: left;
+    float: right;
     position: relative;
     width: 50%;
-    height: 60%;
-    margin-left: 2em;
+    height: 75%;
+    margin-right: 2em;
 }
 
 #logContainer {
@@ -86,6 +88,16 @@
     border: 2px solid black;
     display: block;
     position: relative;
+    float: right;
+}
+
+.FormField {
+    margin-top: 1em;
+    margin-left: 30%;
+}
+
+.FormField__Checkbox {
+    display: inline;
 }
 
 form {
@@ -99,10 +111,12 @@ label {
 
 input {
     display: block;
+    min-width: 60%;
 }
 
 h1 {
     color: white;
+    font-family: 'Permanent Marker', cursive;
 }
 
 h5 {
@@ -117,7 +131,7 @@ h5 {
 h3 {
     float: left;
     margin-left: 2em;
-    font-size: 25px;
+    font-size: 20px;
     width: 100%;
 }
 
