--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -26,6 +26,19 @@
     list-style-type: none;
 }
 
+.checkbox {
+    display: block;
+    position: relative;
+    padding-left: 40px;
+    margin-bottom: 0px;
+    cursor: pointer;
+    font-size: 12px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .roomType:hover .dropdownContainer{
     display: block;
 }
