finished landing page except for input error messages

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -2,7 +2,7 @@
 
 #background {
     background-color: #f7eddc;
-    height: 750px;
+    height: 100%;
     width: 100%;
     border-color: black;
     border-style: solid;
