--- a/src/components/LoginTabs.css
+++ b/src/components/LoginTabs.css
@@ -6,7 +6,6 @@
     float: right;
     position: relative;
     width: 50%;
-    height: 75%;
     margin-right: 7%;
 }
 
@@ -18,16 +17,16 @@
 .btnSubmit {
     font-size: 20px;
     background-color: lightblue;
-    margin-top: 2em;
+    margin-top: 5%;
 }
 
 #divLastName {
-    margin-left: 5%;
+    margin-left: 10%;
 }
 
 .tabs {
     margin-top: 2em; 
-    display: block;
+    /* display: block; */
 }
 
 .tablinks {
@@ -36,12 +35,12 @@
 }
 
 .tabcontent {
-    height: 80%;
     width: 100%;
     border: 2px solid black;
-    display: block;
+    /* display: block; */
     position: relative;
     float: right;
+    padding-bottom: 5%;
 }
 
 .FormField {
