--- a/src/components/ResultsContent.css
+++ b/src/components/ResultsContent.css
@@ -4,6 +4,10 @@ h2{
     margin-bottom: 18px !important;
 }
 
+.container{
+    width: 100% !important;
+}
+
 .listingPreviewContainer{
     border: 1px solid red;
     position: relative;
