--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -8,7 +8,7 @@
     bottom: 0;
     margin: auto;
     background-color: rgba(0,0,0, 0.5);
-  }
+}
 
 .ppopup {
     position: fixed;
@@ -20,7 +20,7 @@
     bottom: 0;
     margin: auto;
     background-color: rgba(0,0,0, 0.5);
-  }
+}
 .popup_inner {
     position: absolute;
     left: 25%;
@@ -37,98 +37,97 @@
 }
 
 #displayPic {
-  background: transparent;
-  position: absolute;
-  left: 25vw;
-  width: 10.66vw;
-  height: 24vh;
-  top: 15vh;
-  flex:right;
+    background: transparent;
+    position: absolute;
+    left: 25vw;
+    width: 13vw;
+    height: 13vw;
+    top: 15vh;
 }
 .ratingButton {
+    display: block;
+    width: 7vw;
+    height: 5vh;
+    margin: 2vh auto;
+    background: #dba8a8;
+    border: 1px solid black;
+    font-size: 1.0625em;
+    left: 50vw;
+}
+#pic {
+    float:right;
+    top: 35vh;
+}
+
+#saveButton {
+    display: block;
+    width: 7vw;
+    height: 5vh;
+    background: #dba8a8;
+    border: 1px solid black;
+    font-size: 1.0625em;
+    margin: 7vh;
+}
+
+#cancelButton {
     display: block;
     width: 7vw;
     height: 5vh;
     margin: 1vh auto;
     background: #dba8a8;
     border: 1px solid black;
-    font-size: 10px;
-    left:50vw;
-}
-#pic {
-  float:right;
-  top: 35vh;
-}
-
-#saveButton {
-  display: block;
-  width: 7vw;
-  height: 5vh;
-  background: #dba8a8;
-  border: 1px solid black;
-  font-size: 12px;
-  margin: 7vh;
-}
-
-#cancelButton {
-  display: block;
-  width: 7vw;
-  height: 5vh;
-  margin: 1vh auto;
-  background: #dba8a8;
-  border: 1px solid black;
-  font-size: 12px;
-  left: 50vw;
-  top: 50vh;
+    font-size: 1.0625em;
+    left: 50vw;
+    top: 50vh;
 }
 #savePButton {
-  display: block;
-  width: 7vw;
-  height: 5vh;
-  background: #dba8a8;
-  border: 1px solid black;
-  font-size: 12px;
-  margin: 10vh;
+    display: block;
+    width: 7vw;
+    height: 5vh;
+    background: #dba8a8;
+    border: 1px solid black;
+    font-size: 1.0625em;
+    margin: 10vh;
 }
 
 #cancelPButton {
-  display: block;
-  width: 7vw;
-  height: 5vh;
-  margin: 7vh;
-  background: #dba8a8;
-  border: 1px solid black;
-  font-size: 12px;
-  left: 50vw;
-  top: 50vh;
+    display: block;
+    width: 7vw;
+    height: 5vh;
+    margin: 7vh;
+    background: #dba8a8;
+    border: 1px solid black;
+    font-size: 1.0625em;
+    left: 50vw;
+    top: 50vh;
 }
 
 .inputs {
-  margin: 0vh;
-  max-height: 150px;
+    margin: 0vh;
+    max-height: 150px;
 }
 .inputsB {
-  margin: 0vh;
-  max-height: 150px;
-  height:150px;
+    margin: 0vh;
+    max-height: 150px;
+    height:150px;
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
-  height: 24px;
-  background: #f7eddc;
+    width: 12px;
+    height: 24px;
+    background: #f7eddc;
 }
 
 ::-webkit-scrollbar-track {
-  background: #948e84;
-  border-radius: 10px;
+    background: #948e84;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: #aca59a;
+    border-radius: 10px;
+    background: #aca59a;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #c5bdb0;
+    background: #c5bdb0;
 }
