--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,4 +1,3 @@
-
 #mainContainer {
     padding: 3.33vh 0 3.33vh 0;
     position: fixed;
@@ -28,7 +27,7 @@
 hr {
     display: block;
     width: 95vw;
-    border: 0.0625vh solid black;
+    border: 0.03125vh solid black;
     margin: 0.5vh 0 0 0;
 }
 
@@ -45,7 +44,6 @@ hr {
 
 
 #profilePictureArea {
-    border: 1px solid red;
     background: transparent;
     position: absolute;
     left: 0;
@@ -56,12 +54,14 @@ hr {
 #profilePic {
     border: 1px solid black;
     border-radius: 10vw;
-    width: 8vw;
-    height: 8vw;
+    width: 13vw;
+    height: 13vw;
     position: absolute;
-    left: 4.165vw;
-    right: 4.165vw;
-    top: 8vh;
+    left: 1.665vw;
+    right: 1.665vw;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .label-ucsd {
@@ -76,24 +76,22 @@ hr {
 }
 
 #bioArea {
-    border: 1px solid orange;
     position: absolute;
     left: 16.33vw;
     width: 32.66vw;
     height: 36vh;
-    font: 18px "Arial";
     background:transparent;
-    font-weight: normal;
+    font-size: 1.125em;
 }
 
 #userName {
     font-size: 2em;
-    margin: 8vh 0 0 1vw;
+    margin: 5vh 0 0 1vw;
 }
 
 #userInfo {
-    font-size: 1.25em;
-    margin: 1vh 0 0 1vw;
+    font-size: 1.33em;
+    margin: 0 0 0 1vw;
 }
 
 #biography {
@@ -101,9 +99,8 @@ hr {
 }
 
 #ratingArea {
-    border: 1px solid yellow;
+    border: 1px solid red;
     background:transparent;
-    border-width: 1px;
     position: absolute;
     left: 48.99vw;
     width: 16.33vw;
@@ -111,23 +108,26 @@ hr {
 }
 
 #ratingString {
-    margin: 4vh 0 12vh 0;
-    font: 20px Arial;
+    margin: 0;
+    padding: 4vh 0 1vh 0;
+    font: 1.5em Arial;
     text-align: center;
 }
 
-.ratingButton {
-    display: block;
-    width: 7vw;
-    height: 5vh;
-    margin: 1vh auto;
-    background: #dba8a8;
-    border: 1px solid black;
-    font-size: 10px;
+#starContainer {
+    margin: auto;
+    width: 6.25vw;
+    padding: 1vh 0 1vh 0;
+}
+
+.ratingStars {
+    display: inline-block;
+    height: 1.25vw;
+    width: 1.25vw;
 }
 
 #progressArea {
-    border: 1px solid darkgoldenrod;
+    border: 1px solid black;
     background: transparent;
     position: absolute;
     left: 65.33vw;
@@ -137,7 +137,6 @@ hr {
 
 #postedListings {
     display: grid;
-    border:1px solid indigo;
     background: transparent;
     position: absolute;
     left: 0vw;
@@ -150,7 +149,6 @@ hr {
 
 #favoriteListings {
     display: grid;
-    border:1px solid violet;
     background: transparent;
     position: absolute;
     left: 50vw;
@@ -180,4 +178,11 @@ hr {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #c5bdb0;
+}
+
+/* TESTING AVG RATING HERE*/
+.meter {
+    height: 20px;  /* Can be anything */
+    position: relative;
+    background: linear-gradient(.25turn, black 76.2%, #f7eddc 76.2%);
 }
