--- a/src/components/MessagingPage.css
+++ b/src/components/MessagingPage.css
@@ -1,4 +1,4 @@
-#background {
+/* #background {
     background-color: #f7eddc;
     height: 750px;
     width: 100%;
@@ -19,7 +19,7 @@
     width: 100%;
     background-color: black;
     display: block;
-}
+} */
 
 #conversations {
     height: 75%;
