--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -10,7 +10,6 @@
 }
 
 #header {
-    height: 20%;
     width: 100%;
     background-color: black;
     text-align: center;
@@ -19,7 +18,6 @@
 
 #topBar {
     display: inline-block;
-    height: 5%;
     width: 100%;
     background-color: rgb(182, 168, 168);
     text-align: center;
@@ -49,7 +47,8 @@
 #headerMsg {
     color: white;
     font-family: 'Permanent Marker', cursive;
-    font-size: 300%
+    font-size: 300%;
+    margin: 0px;
 }
 
 .needSpace {
