--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,7 @@
 .searchBox{
     width: 40vw !important;
+    background-color: white !important;
+    border-radius: 10px !important;
 }
 
 .settingsContainer{
@@ -8,6 +10,7 @@
 
 .navbar{
     height: 110px;
+    background-color: black;
 }
 
 .container-fluid{
@@ -15,7 +18,7 @@
 }
 
 .navbar-left{
-    /* margin-left: 20%; */
+    margin: 0 0;
 }
 
 
@@ -24,6 +27,7 @@
     bottom: 2vw;
     left: 2%;
     float: right;
+    width: 180px;
 }
 
 .profileContainer > div{
@@ -48,4 +52,22 @@ ul:not(.browser-default) li {
     width: 35px;
 }
 
+.fa-user-circle-o{
+    margin-left: 3%;
+}
+
+
+.searchIcon{
+    position: relative;
+    right: 25px;
+    height: 0px;
+    color: black;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 767px){
+    .form-group{
+        height: 0vh;
+    }
+}
 
