--- a/src/components/LoginTabs.css
+++ b/src/components/LoginTabs.css
@@ -69,7 +69,7 @@ form {
 .formField_Input_Error{
     display: block;
     min-width: 70%;
-    border: 1px solid orange;
+    border: 1px solid orange !important;
 }
 #ToS{
     margin:0;
