--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -1,7 +1,7 @@
 .popup {
     position: fixed;
     width: 100%;
-    height: 145vh;
+    height: 140%;
     top: 10vh;
     left: 0;
     right: 0;
@@ -13,7 +13,7 @@
 .ppopup {
     position: fixed;
     width: 100%;
-    height: 130vh;
+    height: 120%;
     top: 10vh;
     left: 0;
     right: 0;
