--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -1,7 +1,7 @@
 .popup {
     position: fixed;
     width: 100%;
-    height: 140%;
+    height: 150%;
     top: 10vh;
     left: 0;
     right: 0;
@@ -50,32 +50,38 @@
 }
 #chooseButton{
   margin:0%;
+  top: 10vh !important;
+}
+#uploadButton{
+  margin:0%;
 }
 #button4{ 
-  margin-top:50% !important;
+  margin-top:53% !important;
   margin-left:20%;
 }
 #displayPic {
   background: transparent;
   position: absolute;
-  left: 30vw;
-  width: 12vw;
-  height: 24vh;
+  left: 55%;
+  width: 32%;
+  height: 35%;
   top: 18vh;
   flex:right;
 }
 #pic {
   float:right;
-  top: 35vh;
+  top: 40%;
 }
 .inputs {
   margin: 0vh;
-  max-height: 150px;
+  max-height: 20px;
+  margin-bottom: 5vh;
 }
 .inputsB {
-  margin: 0vh;
+  margin: 20vh;
   max-height: 150px;
   height:150px;
+  margin-top:3% !important;
 }
 
 ::-webkit-scrollbar {
