--- a/src/components/ListingPreview.css
+++ b/src/components/ListingPreview.css
@@ -45,6 +45,7 @@
     border-radius: 50%;
     max-height: 35px;
     min-height: 35px;
+    cursor: pointer;
 }
 .userName{
     grid-column-start: 2;
@@ -53,6 +54,8 @@
     font-size: 12px;
     text-align: left;
     margin-left: -10%;
+    cursor: pointer;
+
 }
 .distance{
     grid-column-start:4;
