--- a/src/components/ListingPreview.css
+++ b/src/components/ListingPreview.css
@@ -17,12 +17,16 @@
     grid-column-start: 1;
     grid-column-end: 5;
     text-align: left;
+    cursor: pointer;
+
 }
 
 .leaseImage{
     width: 100%;
     height: 100%;
     position:relative;
+    cursor: pointer;
+
 }
 
 
