--- a/src/components/ForgotPassword.css
+++ b/src/components/ForgotPassword.css
@@ -1,62 +1,62 @@
-.modalBox {
-    background: none;
-    border: none;
-}
+/*.modalBox {*/
+    /*background: none;*/
+    /*border: none;*/
+/*}*/
 
-.modal {
-    border: 1px solid black;
-    display: none;
-    width: 50%;
-    height: 50%;
-    position: fixed;
-    background-color: #f7eddc;
-    margin-left: 25%;
-    margin-top: 10%;
-}
+/*.modal {*/
+    /*border: 1px solid black;*/
+    /*display: none;*/
+    /*width: 50%;*/
+    /*height: 50%;*/
+    /*position: fixed;*/
+    /*background-color: #f7eddc;*/
+    /*margin-left: 25%;*/
+    /*margin-top: 10%;*/
+/*}*/
 
-h3 {
-    float: left;
-    margin-left: 2em;
-    font-size: 25px;
-    width: 100%;
-}
+/*h3 {*/
+    /*float: left;*/
+    /*margin-left: 2em;*/
+    /*font-size: 25px;*/
+    /*width: 100%;*/
+/*}*/
 
-.FPinputs {
-    margin-left: 30%;
-}
+/*.FPinputs {*/
+    /*margin-left: 30%;*/
+/*}*/
 
-label {
-    display: block;
-}
+/*label {*/
+    /*display: block;*/
+/*}*/
 
-.FPinputbox {
-    min-width: 60%;
-}
+/*.FPinputbox {*/
+    /*min-width: 60%;*/
+/*}*/
 
-.FPsubmit {
-    font-size: 20px;
-    background-color: lightblue;
-    margin-top: 2em;
-    margin-left: 30%;
-}
+/*.FPsubmit {*/
+    /*font-size: 20px;*/
+    /*background-color: lightblue;*/
+    /*margin-top: 2em;*/
+    /*margin-left: 30%;*/
+/*}*/
 
-.FPcancel {
-    font-size: 20px;
-    position: absolute;
-    right: 2%;
-    bottom: 2%;
-}
+/*.FPcancel {*/
+    /*font-size: 20px;*/
+    /*position: absolute;*/
+    /*right: 2%;*/
+    /*bottom: 2%;*/
+/*}*/
 
-#resendCode {
-    float: right;
-    color: blue;
-    background: none;
-    border: none;
-    margin-right: 27%;
-}
+/*#resendCode {*/
+    /*float: right;*/
+    /*color: blue;*/
+    /*background: none;*/
+    /*border: none;*/
+    /*margin-right: 27%;*/
+/*}*/
 
-#codeResent {
-    text-align: center;
-    color: red;
-    display: none;
-}
+/*#codeResent {*/
+    /*text-align: center;*/
+    /*color: red;*/
+    /*display: none;*/
+/*}*/
