--- a/src/components/ListingPreview.css
+++ b/src/components/ListingPreview.css
@@ -29,7 +29,6 @@
 
 }
 
-
 .infoBox{
     width: 102%;
     /* border: 6px solid grey; */
@@ -117,7 +116,15 @@
 
 }
 
+
+.modal {
+
+   background: none !important;
+}
+
+
 h3{
     margin-left: 0 !important;
 }
+
 
