--- a/src/components/ForgotPassword.css
+++ b/src/components/ForgotPassword.css
@@ -1,9 +1,9 @@
-.modalBox {
+.fpmodalBox {
     background: none;
     border: none;
 }
 
-.modal {
+.fpmodalBox > .modal {
     border: 1px solid black;
     display: none;
     width: 50%;
@@ -14,7 +14,7 @@
     margin-top: 10%;
 }
 
-h3 {
+.fpmodalBox > .modal > h3 {
     float: left;
     margin-left: 2em;
     font-size: 25px;
