--- a/src/components/LoginTabs.css
+++ b/src/components/LoginTabs.css
@@ -46,7 +46,8 @@
     color: black;
 }
 
-form {
+/* Change this form to a classname */
+.FormFields {
     margin-top: 2em;
     margin-left: 10%;
 }
@@ -99,4 +100,20 @@ form {
 
 .tab:hover {
     background-color: #37916e;
+}
+
+#termsModal {
+    position: absolute;
+    display: none;
+    bottom: 18%;
+    height: 70%;
+    width: 50%;
+    background-color: #f7eddc;
+}
+
+#closeTerms {
+    font-size: 15px;
+    position: absolute;
+    right: 2%;
+    bottom: 2%;
 }
