--- a/src/components/LoginTabs.css
+++ b/src/components/LoginTabs.css
@@ -108,6 +108,9 @@ form {
     display:block;
 }
 
-#wrongInput{
-    color: red
+#wrongInputRegister{
+    color:red
+}
+#wrongInputLogin{
+    color:red
 }
