the forgot password is pretty now

--- a/src/components/ForgotPassword.css
+++ b/src/components/ForgotPassword.css
@@ -19,6 +19,22 @@
     left: 0;
     z-index: 1050;
 }
+#forgotModal3{
+    margin: auto;
+    padding: 30px!important;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1050;
+}
+#forgotModal4{
+    margin: auto;
+    padding: 30px!important;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1050;
+}
 
 .FPcancel{
     margin:3px!important;
