--- a/src/components/LoginTabs.css
+++ b/src/components/LoginTabs.css
@@ -24,9 +24,8 @@
     margin-top: 2em; 
 }
 
-.tablinks {
-    font-size: 24px;
-    border-radius: 8px;
+.tabs .tab {
+    width: 25%;
 }
 
 .tabcontent {
@@ -116,6 +115,8 @@
     position: absolute;
     right: 2%;
     bottom: 2%;
+}
+
 .hidden{
     display:none;
 }
